# andromeda-linux-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  andromeda.conf  common.mk  config.mk  makefile
.github/workflows/: c-cpp.yml  ubuntu.yml  valgrind-test.yml
_include/: andro_cmd.h  andro_conf.h  andro_crc32.h  andro_func.h  andro_global.h  andro_lockmutex.h  andro_logic.h  andro_macro.h  andro_memory.h  andro_packet.h  andro_signal.h  andro_socket.h  andro_threadpool.h  andro_tmp_proto.h  ikcp.h
app/: CMakeLists.txt  andro_conf.cxx  andro_log.cxx  andro_printf.cxx  andro_setproctitle.cxx  andro_string.cxx  andromeda.c  andromeda.cxx
business/: CMakeLists.txt  andro_logic.cxx
logic/: andro_logic.cxx
misc/: CMakeLists.txt  andro_crc32.cxx  andro_memory.cxx  andro_threadpool.cxx
net/: CMakeLists.txt  andro_socket.cxx  andro_socket_accept.cxx  andro_socket_conn.cxx  andro_socket_inet.cxx  andro_socket_request.cxx  andro_socket_time.cxx  ikcp.c
proc/: CMakeLists.txt  andro_daemon.cxx  andro_event.cxx  andro_process_cycle.cxx
proto/: auth.proto
signal/: CMakeLists.txt  andro_signal.cxx
